Исправления по замечаниям

--- a/catalog.html
+++ b/catalog.html
@@ -74,13 +74,13 @@
                       </li>
                     </ul>
                   </div>
-                    <div class="user-order">
-                      <span>Товаров: 2</span>
-                      <span>Сумма: 2000 ₽</span>
-                    </div>
-                    <a class="user-order-button" href="#">
-                      <span class="popover-link">Открыть корзину</span>
-                    </a>
+                  <div class="user-order">
+                    <span>Товаров: 2</span>
+                    <span>Сумма: 2000 ₽</span>
+                  </div>
+                  <a class="user-order-button" href="#">
+                    <span class="popover-link">Открыть корзину</span>
+                  </a>
                 </div>
               </li>
             </ul>
@@ -157,10 +157,10 @@
                 <div class="range">
                   <div class="range-scale">
                     <div class="range-bar" style="left: 0; width: 119px">
-                      <button class="range-toggle toggle-min">
+                      <button class="range-toggle toggle-min" type="button">
                         <span class="visually-hidden">Изменить минимальную цену.</span>
                       </button>
-                      <button class="range-toggle toggle-max">
+                      <button class="range-toggle toggle-max" type="button">
                         <span class="visually-hidden">Изменить максимальную цену.</span>
                       </button>
                     </div>
@@ -250,12 +250,12 @@
                 <div class="filter-arrow">
                   <div class="filter-arrow-up-container">
                     <a class="filter-arrow-up" href="#">
-                      <span class="visually-hidden">>По возрастанию</span>
+                      <span class="visually-hidden">По возрастанию</span>
                     </a>
                   </div>
                   <div class="filter-arrow-down-container">
                     <a class="filter-arrow-down" href="#">
-                      <span class="visually-hidden">>По убыванию</span>
+                      <span class="visually-hidden">По убыванию</span>
                     </a>
                   </div>
                 </div>
@@ -332,10 +332,10 @@
                     <a class="pagination-link" href="#">15</a>
                   </li>
                 </ul>
-                  <a class="pagination-next" href="#">
-                    Вперёд
-                  </a>
-                </div>
+                <a class="pagination-next" href="#">
+                  Вперёд
+                </a>
+              </div>
             </div>
           </section>
         </div>
