Правки после первой попытки защиты

--- a/catalog.html
+++ b/catalog.html
@@ -79,7 +79,7 @@
                     <span>Сумма: 2000 ₽</span>
                   </div>
                   <a class="user-order-button" href="#">
-                    <span class="popover-link">Открыть корзину</span>
+                    Открыть корзину
                   </a>
                 </div>
               </li>
@@ -168,10 +168,10 @@
 
                   <div class="range-wrapper-inputs">
                     <label class="catalog-filter-label">
-                      от <input class="range-input range-input-min-price" type="number" value="0" name="min-price" placeholder="0">
+                      от <input class="range-input range-input-min-price" type="number" value="0" name="min-price" placeholder="0" required>
                     </label>
                     <label class="catalog-filter-label">
-                      до <input class="range-input" type="number" value="5000" name="max-price" placeholder="5000">
+                      до <input class="range-input" type="number" value="5000" name="max-price" placeholder="5000" required>
                     </label>
                   </div>
                 </div>
